--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<!-- Add your HTML Code here -->
+<html>
+<head>
+<link rel="stylesheet" href="proj_css.css">
+</head>
+<body>
+<div id="header"></div>
+<div class="left"></div>
+<div class="stuff">
+  <br><br>
+  <h1>Resume</h1>
+  <hr />
+<br>  
+
+<h2>Name : Arbaj Shaikh</h2>
+  
+  <br>
+  <p class="head">Interests</p>
+  <ul>
+    <li>Drawing</li>
+    <li>Photography</li>
+    <li>Design</li>
+    <li>Programming</li>
+    <li>Computer Science</li>
+  </ul>
+  <p class="head">Skills</p>
+  <ul>
+    <li>Web Design with HTML & CSS</li>
+  </ul>
+  <p class="head">Education</p>
+  <ul>
+      <li>antar bharti vidyalay</li>
+      <li>mjp collage</li>
+    <li>sknscoe</li>
+  </ul>
+   
+</div>
+</body>
+</html>
