--- a/index.html
+++ b/index.html
@@ -1,39 +1,38 @@
 <html>
 <head>
-  <title>  </title>
-<link rel="stylesheet" href="proj_css.css">
+<link href="proj_css.css"  type="text/css"rel="stylesheet">
 </head>
 <body>
-<div id="header"></div>
-<div class="left"></div>
-<div class="stuff">
-  <br><br>
-  <h1>Resume</h1>
-  <hr />
-<br>  
-
-<h2>Name : Arbaj Shaikh</h2>
-  
+  <div class="profileBody">
+<h1> Arbaj Shaikh</h1>
+<h2> Front end engineer <h2>
+<br>
+    <hr />	
   <br>
-  <p class="head">Interests</p>
-  <ul>
-    <li>Drawing</li>
-    <li>Photography</li>
-    <li>Design</li>
-    <li>Programming</li>
-    <li>Computer Science</li>
-  </ul>
-  <p class="head">Skills</p>
-  <ul>
-    <li>Web Design with HTML & CSS</li>
-  </ul>
-  <p class="head">Education</p>
-  <ul>
-      <li>antar bharti vidyalay</li>
-      <li>mjp collage</li>
-    <li>sknscoe</li>
-  </ul>
+
+  <strong>Career objective:</strong><br>
+  <p>Work for an organization and give my best and improve my skills knowledge and qualities.</p>
+  <br><br>
+   <hr />	
+   <br>
    
-</div>
+ 
+  
+<p><strong> PERSONAL STRENGTHS: </strong></p>
+  <ul>
+      <li>I have leadership qualities.</li>
+      <li>have quite good communication skills.</li>
+    <li>I am adaptable.</li>
+  </ul>
+  <br>
+  <hr />
+  <br>
+  <p>
+  <strong>Contact Details:</strong><br>
+  mail me at:<a href="arbaajshaikh19@gmail.com" > arbaj shaikh </a>
+  </p>
+  
+  
+   </div>
 </body>
 </html>
