--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
 
+<html>
+<head>
+<link href="proj_css.css"  type="text/css"rel="stylesheet">
+</head>
+<body>
+  <div class="profileBody">
+<h1> Arbaj Shaikh</h1>
+<h2> Front end engineer <h2>
+<br>
+    <hr />	
+  <br>
+
+  <strong>Career objective:</strong><br>
+  <p>Work for an organization and give my best and improve my skills knowledge and qualities.</p>
+  <br><br>
+   <hr />	
+   <br>
+   
+ 
+  
+<p><strong> PERSONAL STRENGTHS: </strong></p>
+  <ul>
+      <li>I have leadership qualities.</li>
+      <li>have quite good communication skills.</li>
+    <li>I am adaptable.</li>
+  </ul>
+  <br>
+  <hr />
+  <br>
+  <p>
+  <strong>Contact Details:</strong><br>
+  mail me at:<a href="arbaajshaikh19@gmail.com" > arbaj shaikh </a>
+  </p>
+  
+  
+   </div>
+</body>
+</html>
