--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-<link href="proj_css.css"  type="text/css"rel="stylesheet">
+<link href="style.css"  type="text/css"rel="stylesheet">
 </head>
 <body>
   <div class="profileBody">
